[tool.poetry]
name = "lumos chess"
version = "0.1.0"
description = ""
authors = ["Mike Rosseel <mike.rosseel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-chess = "^1.999"
pyserial = "^3.5"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
